# ledtomato

./: .gitattributes  .gitignore  LEDTomato.code-workspace  LINE-ENDINGS.md  README.md  WINDOWS-SETUP.md  build-app.bat  build-app.ps1  build-app.sh  build-esp32.bat  build-esp32.sh  normalize-line-endings.bat  normalize-line-endings.sh  package-lock.json  setup-windows.bat
esp32-firmware/: platformio.ini
esp32-firmware/include/: config.h
esp32-firmware/src/: main.cpp
python-cli/: README.md  demo.py  ledtomato.bat  ledtomato.ps1  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.ps1  setup.sh  test_cli.py
python-cli/ledtomato_cli/: __init__.py  client.py  config.py  discovery.py  display.py  main.py  timer.py
python-cli/ledtomato_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
react-native-client/: App.js  app.json  package-lock.json  package.json  package.json.new
react-native-client/android/app/: build.gradle
react-native-client/android/app/src/main/: AndroidManifest.xml
react-native-client/android/app/src/main/res/raw/: README.md
react-native-client/components/: ColorPicker.js  ConfigModal.js  PomodoroTimer.js
react-native-client/services/: DeviceService.js  WindowsService.js
react-native-client/windows/: ledtomatoclient.sln
react-native-client/windows/ledtomatoclient/: App.cpp  App.h  App.idl  App.xaml  AutolinkedNativeModules.g.cpp  AutolinkedNativeModules.g.targets  MainPage.cpp  MainPage.h  MainPage.idl  MainPage.xaml  Package.appxmanifest  ReactPackageProvider.cpp  ReactPackageProvider.h  ledtomatoclient.vcxproj  packages.lock.json
windows/: App.xaml  App.xaml.cs  EspDeviceManager.cs  LedTomatoWinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  PomodoroTimer.cs  README.md  app.manifest  windows.sln
windows/.github/: copilot-instructions.md
windows/Assets/: .gitkeep
windows/Properties/PublishProfiles/: win-x64.pubxml  win-x86.pubxml
