[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledtomato-cli"
version = "1.0.0"
description = "Command-line interface for LED Tomato Pomodoro Timer"
readme = "README.md"
authors = [
    {name = "LED Tomato Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
keywords = ["pomodoro", "timer", "productivity", "iot", "esp32", "cli"]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "rich>=12.0.0",
    "zeroconf>=0.47.0",
    "colorama>=0.4.4",
    "pydantic>=1.10.0",
    "python-dateutil>=2.8.0",
    "playsound>=1.3.0",
    "appdirs>=1.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

[project.urls]
Homepage = "https://github.com/yourusername/ledtomato"
Repository = "https://github.com/yourusername/ledtomato"
Documentation = "https://github.com/yourusername/ledtomato/blob/main/README.md"
"Bug Tracker" = "https://github.com/yourusername/ledtomato/issues"

[project.scripts]
ledtomato = "ledtomato_cli.main:cli"
tomato = "ledtomato_cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ledtomato_cli*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
